[FEAT] : 세탁특공대 이벤트 구현

--- a/app/src/main/res/layout/fragment_main_event2.xml
+++ b/app/src/main/res/layout/fragment_main_event2.xml
@@ -4,18 +4,16 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="#FFFFF3"
-    tools:context=".View.MainEvent">
+    tools:context=".View.MainEvent2">
 
-    <TextView
+    <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/iv_event2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/tv_text"
-        android:text="임시 테스트"
-        android:textSize="24sp"
-        app:layout_constraintStart_toStartOf="parent"
+        android:src="@drawable/event_2"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
