--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,10 +18,12 @@
 
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/vp2_page"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="40dp"
         android:layout_marginBottom="40dp"
+        android:clipChildren="false"
+        android:clipToPadding="false"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -29,19 +31,17 @@
 
     <com.tbuonomo.viewpagerdotsindicator.SpringDotsIndicator
         android:id="@+id/dots_indicator"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/vp2_page"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:dampingRatio="0.5"
-        app:progressMode="true"
-        app:dotsColor="@color/purple_500"
-        app:dotsCornerRadius="2dp"
+        app:dotsColor="@color/blue1"
+        app:dotsCornerRadius="20dp"
         app:dotsSize="16dp"
         app:dotsSpacing="6dp"
-        app:dotsStrokeColor="#673AB7"
-        app:dotsStrokeWidth="2dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/vp2_page"
+        app:progressMode="true"
         app:stiffness="300" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
