--- a/app/src/main/res/layout/fragment_main_event3.xml
+++ b/app/src/main/res/layout/fragment_main_event3.xml
@@ -4,18 +4,16 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="#5FCD9D"
-    tools:context=".View.MainReview">
+    tools:context=".View.MainEvent3">
 
-    <TextView
+    <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/iv_event3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/tv_text"
-        android:text="임시테스트 2"
-        android:textSize="24sp"
-        app:layout_constraintStart_toStartOf="parent"
+        android:src="@drawable/event_3"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
