--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="blue1">#2962F6</color>
+    <color name="gray2">#E9E9E9</color>
+    <color name="yellow">#FFEB60</color>
 </resources>
