--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:overScrollMode="never"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
@@ -10,10 +11,10 @@
         android:id="@+id/tb_main"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        android:background="@color/blue"
         app:layout_constraintEnd_toEndOf="parent"
-        android:background="@color/blue">
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -21,79 +22,103 @@
 
             <TextView
                 android:id="@+id/tv_appbar_address"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="12sp"
-                app:layout_constraintTop_toTopOf="parent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginVertical="7dp"
+                android:text="서울 마포구 양화로 183 822호"
+                android:textColor="@color/white"
+                android:textSize="12sp"
+                android:textStyle="normal"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginVertical="7dp"
-            android:textColor="@color/white"
-            android:text="서울 마포구 양화로 183 822호"
-            />
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <ImageView
                 android:layout_width="14dp"
                 android:layout_height="7dp"
+                android:layout_marginStart="6dp"
                 android:src="@drawable/main_bottom_arrow"
-                app:layout_constraintTop_toTopOf="@id/tv_appbar_address"
                 app:layout_constraintBottom_toBottomOf="@id/tv_appbar_address"
                 app:layout_constraintStart_toEndOf="@id/tv_appbar_address"
-                android:layout_marginStart="6dp"
-                />
+                app:layout_constraintTop_toTopOf="@id/tv_appbar_address" />
 
             <ImageView
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginEnd="13dp"
                 android:src="@drawable/counselor_icon"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginEnd="13dp"/>
+                app:layout_constraintTop_toTopOf="parent" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
 
     </androidx.appcompat.widget.Toolbar>
 
+    <ScrollView
+        android:id="@+id/scroll_main"
+        android:overScrollMode="never"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:fillViewport="true"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tb_main">
+
+
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/container_main"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/tb_main"
         app:layout_constraintBottom_toTopOf="@id/bnv_main"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintTop_toBottomOf="@id/tb_main" />
 
-
+    </ScrollView>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/flbtn_main"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:borderWidth="0dp"
-        app:fabCustomSize="39dp"
-        android:id="@+id/flbtn_main"
-        app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginEnd="12dp"
         android:layout_marginBottom="25dp"
-        app:layout_constraintBottom_toTopOf="@id/bnv_main"
+        android:backgroundTint="@color/white"
         android:src="@drawable/ic_baseline_keyboard_arrow_up_24"
-        android:backgroundTint="@color/white"/>
+        app:borderWidth="0dp"
+        app:fabCustomSize="39dp"
+        app:layout_constraintBottom_toTopOf="@id/bnv_main"
+        app:layout_constraintEnd_toEndOf="parent" />
 
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bnv_main"
         android:layout_width="match_parent"
         android:layout_height="81dp"
-        app:labelVisibilityMode="labeled"
+        android:elevation="8dp"
+        android:theme="@style/Widget.BottomNavigationView"
+        app:itemIconSize="@dimen/bottom_navigation_icon_size"
         app:itemIconTint="@color/selector_bottom_navi"
         app:itemRippleColor="#C4C4C4"
         app:itemTextColor="@color/black"
+        android:background="@drawable/rectangle_btmnavigation"
+        app:labelVisibilityMode="labeled"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:menu="@menu/menu_main" />
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="56dp"
+        android:elevation="12dp"
+        android:src="@drawable/icon_plus"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
