[FEAT] : 구현에 필요한 이미지 사용

--- a/app/src/main/res/layout/activity_smart_factory.xml
+++ b/app/src/main/res/layout/activity_smart_factory.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Event.MainActivity">
+    tools:context=".View_Factory.SmartFactoryActivity">
 
     <TextView
         android:id="@+id/tv_text"
@@ -26,10 +26,8 @@
         android:clipToPadding="false"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_text"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toBottomOf="@+id/tv_text" />
 
     <com.tbuonomo.viewpagerdotsindicator.SpringDotsIndicator
         android:id="@+id/dots_indicator"
