--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="blue1">#2962F6</color>
     <color name="gray2">#E9E9E9</color>
     <color name="yellow">#FFEB60</color>
+    <color name="bluegray1">#f4f5f9</color>
 </resources>
