--- a/app/src/main/res/layout/fragment_review3.xml
+++ b/app/src/main/res/layout/fragment_review3.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -29,10 +28,11 @@
 
     <TextView
         android:id="@+id/tv_title"
-        android:layout_marginStart="8dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="28dp"
+        android:fontFamily="@font/spoqa_han_sens_neo_bold"
         android:text="깨끗한사과"
         android:textColor="#000000"
         android:textSize="12sp"
@@ -45,13 +45,17 @@
         android:layout_height="wrap_content"
         android:layout_marginRight="14dp"
         android:text="세특 12회차"
+                    android:fontFamily="@font/spoqa_han_sans_neo"
+
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/tv_title"/>
+        app:layout_constraintTop_toTopOf="@+id/tv_title" />
 
     <TextView
         android:id="@+id/tv_text1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+                    android:fontFamily="@font/spoqa_han_sans_neo"
+
         android:layout_marginTop="12dp"
         android:text="수거"
         android:textColor="#000000"
@@ -63,6 +67,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
+                    android:fontFamily="@font/spoqa_han_sans_neo"
+
         android:text="배송"
         android:textColor="#000000"
         app:layout_constraintStart_toStartOf="@id/tv_text1"
@@ -74,6 +80,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
         android:text="세탁"
+                    android:fontFamily="@font/spoqa_han_sans_neo"
+
         android:textColor="#000000"
         app:layout_constraintStart_toStartOf="@id/tv_text2"
         app:layout_constraintTop_toBottomOf="@id/tv_text2" />
@@ -106,39 +114,45 @@
         app:layout_constraintTop_toTopOf="@id/tv_text3" />
 
     <TextView
+        android:id="@+id/tv_comment"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/tv_comment"
-        app:layout_constraintStart_toStartOf="@id/tv_text3"
-        app:layout_constraintTop_toBottomOf="@id/tv_text3"
         android:layout_marginTop="15dp"
+                    android:fontFamily="@font/spoqa_han_sans_neo"
+
         android:text="종종 자주 이용할게요!"
-        android:textSize="12sp"/>
+        android:textSize="12sp"
+        app:layout_constraintStart_toStartOf="@id/tv_text3"
+        app:layout_constraintTop_toBottomOf="@id/tv_text3" />
 
     <TextView
+        android:id="@+id/tv_bottomTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/tv_bottomTitle"
-        app:layout_constraintStart_toStartOf="@id/tv_title"
-        app:layout_constraintBottom_toBottomOf="@id/iv_reviewImg3"
+                    android:fontFamily="@font/spoqa_han_sans_neo"
+
+        android:layout_marginBottom="13dp"
         android:text="@string/bottomTitle"
-        android:textSize="12sp"
         android:textColor="#c4c4c4"
-        android:layout_marginBottom="13dp"/>
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/cl_recommendView"
-        android:layout_width="52dp"
+        android:textSize="12sp"
+        app:layout_constraintBottom_toBottomOf="@id/iv_reviewImg3"
+        app:layout_constraintStart_toStartOf="@id/tv_title" />
+
+    <androidx.appcompat.widget.LinearLayoutCompat
+        android:id="@+id/ll_recommend"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/recommend_frame"
-        android:padding="5dp"
+        android:gravity="center"
+        android:padding="6dp"
         app:layout_constraintBottom_toBottomOf="@id/tv_bottomTitle"
-        app:layout_constraintEnd_toEndOf="@+id/tv_cleanCount">
+        app:layout_constraintEnd_toEndOf="@id/tv_cleanCount">
 
         <ImageView
             android:id="@+id/iv_DdaBong"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="5dp"
+            android:layout_marginEnd="5dp"
             android:src="@drawable/recommend_button"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -148,15 +162,29 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="5dp"
-            android:text="10"
+            android:text="99"
             android:textColor="@color/recommend_color"
             android:textSize="12sp"
-            app:layout_constraintEnd_toEndOf="parent"
+                        android:fontFamily="@font/spoqa_han_sans_neo"
+
+            app:layout_constraintEnd_toStartOf="@id/tv_plus"
             app:layout_constraintTop_toTopOf="@id/iv_DdaBong" />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+        <TextView
+            android:id="@+id/tv_plus"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="+"
+            android:textColor="@color/recommend_color"
+            android:textSize="12sp"
+            android:visibility="gone"
+                        android:fontFamily="@font/spoqa_han_sans_neo"
 
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@id/tv_recommendCount"
+            tools:visibility="visible" />
 
+    </androidx.appcompat.widget.LinearLayoutCompat>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
