--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -138,21 +138,22 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tv_event_home" />
 
-        <com.tbuonomo.viewpagerdotsindicator.SpringDotsIndicator
+        <com.tbuonomo.viewpagerdotsindicator.DotsIndicator
             android:id="@+id/dots_indicator_event"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:dampingRatio="0.5"
-            app:dotsColor="@color/blue1"
+
+            app:dotsColor="@color/gray2"
+            app:selectedDotColor="@color/blue1"
             android:layout_marginTop="15dp"
-            app:dotsCornerRadius="20dp"
+            app:dotsCornerRadius="30dp"
             app:dotsSize="9dp"
             app:dotsSpacing="6dp"
+            app:dotsWidthFactor="1.0"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/vp_home1"
-            app:progressMode="true"
-            app:stiffness="300" />
+            app:progressMode="false" />
 
         <TextView
             android:id="@+id/tv_review_home"
@@ -178,21 +179,21 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tv_review_home" />
 
-        <com.tbuonomo.viewpagerdotsindicator.SpringDotsIndicator
+        <com.tbuonomo.viewpagerdotsindicator.DotsIndicator
             android:id="@+id/dots_indicator_review"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:dampingRatio="0.5"
-            app:dotsColor="@color/yellow"
+            app:dotsColor="@color/gray2"
+            app:selectedDotColor="@color/yellow"
             android:layout_marginTop="15dp"
-            app:dotsCornerRadius="20dp"
+            app:dotsCornerRadius="30dp"
             app:dotsSize="9dp"
             app:dotsSpacing="6dp"
+            app:dotsWidthFactor="1.0"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/vp_home2"
-            app:progressMode="true"
-            app:stiffness="300" />
+            app:progressMode="false" />
 
         <TextView
             android:id="@+id/tv_find_home"
